--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:roundIcon="@drawable/__2"
         android:supportsRtl="true"
         android:theme="@style/Theme.Botflow">
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".AuthActivity">
+        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".activities.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
